--- a/Proyectos.html
+++ b/Proyectos.html
@@ -4,47 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Proyectos</title>
+    <link rel="stylesheet" href="P.css">
 </head>
 <body>
-    <div>
-        <div>
-            <h1>Proyectos de Roberto Oyola</h1>
-        </div>
-        <div>
-            <div style="display: inline-block;">
+    <div class="container">
+        <h1>Proyectos de Roberto Oyola</h1>
+
+        <div class="project">
+            <div>
                 <h2>Tecno Banco</h2>
                 <h5>C#</h5>
             </div>
-            <div style="display: inline-block;">
-                <p>Simulador de bancco virtual con la posibilidad de crear cuentas retiros envio de 
-                    correos y imprimir o enviar al correo el estado de cuentas</p>
+            <div>
+                <p>Simulador de banco virtual con la posibilidad de crear cuentas, retiros, enviar correos y generar estados de cuenta.</p>
                 <a href="https://github.com/RobertoOyola/Proyecto-banco.git" target="_blank">GitHub</a>
             </div>
         </div>
-        <div>
-            <div style="display: inline-block;">
+
+        <div class="project">
+            <div>
                 <h2>Libreria Virtual</h2>
                 <h5>Angular y C#</h5>
             </div>
-            <div style="display: inline-block;">
-                <p>Libreria hecha para llevar el registro del inventario del mismo con la posibilidad de crear prestamos de los mismos libros</p>
+            <div>
+                <p>Librería hecha para llevar el registro del inventario y gestionar préstamos de libros.</p>
                 <p>
-                    <a href="https://github.com/RobertoOyola/APPLibreria" target="_blank">GitHub Front</a> 
-                    -
+                    <a href="https://github.com/RobertoOyola/APPLibreria" target="_blank">GitHub Front</a> - 
                     <a href="https://github.com/RobertoOyola/LibreriaProyecto" target="_blank">GitHub Back</a>
                 </p>
             </div>
         </div>
-        <div>
-            <div style="display: inline-block;">
-                <h2>Banco  Virtual 2</h2>
-                <h5>Angular y Larabel</h5>
+
+        <div class="project">
+            <div>
+                <h2>Banco Virtual 2</h2>
+                <h5>Angular y Laravel</h5>
             </div>
-            <div style="display: inline-block;">
-                <p>Banco con inicio de secion con la capacidad de hacer una llamada a la api para realizar transacciones con otra api</p>
-                <p>
-                    <a href="https://github.com/RobertoOyola/BANCOAPP" target="_blank">GitHub Back</a>
-                </p>
+            <div>
+                <p>Banco con inicio de sesión y capacidad de hacer llamadas a la API para realizar transacciones.</p>
+                <a href="https://github.com/RobertoOyola/BANCOAPP" target="_blank">GitHub Back</a>
             </div>
         </div>
     </div>
